--- a/Meta NFT/src/scss/pages/home/_home.scss
+++ b/Meta NFT/src/scss/pages/home/_home.scss
@@ -64,6 +64,10 @@
             }
         }
         .boxing{
+            @media (max-width:768px) {
+                width: 330px;
+                margin: auto;
+            }
             @include Text($ground:$rgba_255_003,$colors:$white_color,$border:2px solid $rgba_255_01,$radius:24px);
             padding: 20px;
             overflow: hidden;
@@ -98,9 +102,10 @@
                 }
                 }
                 .img{
+                    width: 100%;
                     img{
                         border-radius: 24px;
-                        @include Img($wid:149px,$heit:149px);
+                        @include Img($wid:100%,$heit:149px,$o_fit:cover,$o_pos:center);
                     }
                 }
             }
@@ -129,12 +134,16 @@
             }
         }
         .boxing{
-            margin: 0 auto;
+            // margin: 0 auto;
+            @media (max-width:768px) {
+               max-width: 350px;
+               margin: auto; 
+            }
             @include Text($ground:$rgba_255_003,$colors:$white_color,$border:2px solid $rgba_255_01,$radius:24px);
             padding: 20px;
             transition: all 0.3s ease-in-out;
             transform: translateY(10px);
-            @include Img($wid:350px,$heit:475px,$flow:hidden);
+            @include Img($wid:$wid_100,$heit:475px,$flow:hidden);
             &:hover{
                 transform: translateY(0);
                 border: 2px solid $pink_color;
@@ -142,10 +151,11 @@
             .all{
                 &:hover{ .abid{ transform: translateY(0); } }
                 .img{
-                    @include Img($wid:300px,$heit:300px,$pos:relative,$flow:hidden);
+                    border-radius: 30px;
+                    @include Img($wid:100%,$heit:300px,$pos:relative,$flow:hidden);
                     img{
                         border-radius: 30px;
-                        @include Img($wid:$wid_100,$heit:100%,$o_fit:cover,$o_pos:center);
+                        @include Img($wid:320px,$heit:100%,$o_fit:cover,$o_pos:center);
                     }
                 }
                 .heart{
@@ -239,6 +249,10 @@
             }
         }
         .boxing{
+            @media (max-width:768px) {
+                width: 75%;
+                margin: auto;
+            }
             @include Text($ground:$rgba_255_003,$colors:$white_color,$border:2px solid $rgba_255_01,$radius:24px);
             padding: 10px 10px;
             overflow: hidden;
@@ -281,7 +295,34 @@
             font-family: 'Montserrat', sans-serif;
             @include Text($colors:$white_color,$f_size:28px,$f_weight:$font_700_w,$l_spacing:.6px);
         }
-        .accordion{ @include Flex($f_direction:column,$gap:30px); }
+        .accordion{ 
+            @include Flex($f_direction:column,$gap:30px);
+            .accordion-item{
+                border: none;
+                background: transparent;
+                .accordion-button{
+                    &::after{
+                        content: '\f107';
+                        @include Img($pos:absolute,$top:8px,$right:9px,$wid:43px,$heit:43px);
+                        font-family: "FontAwesome";
+                        @include Text($f_size:22px,$f_weight:$font_700_w,$colors:$white_color,$l_height:44px,$t_align:center,$ground:$line_color,$radius:24px);
+                    }
+                    font-family: 'Michroma', sans-serif;
+                    @include Text($radius:24px 24px 0px 0px,$ground:$rgba_255_003,$border:1px solid $rgba_255_01,$colors:$white_color,$f_weight:400,$f_size:17px);
+                }
+                .accordion-body{
+                    font-size: 15px;
+line-height: 1.7;
+margin: 0;
+color: #b9b5b5;
+padding: 20px;
+border: 1px solid #19213e;
+border-top: none;
+border-radius: 0 0 24px 24px;
+
+                }
+            }
+        }
     }
 }
 #blur{
