--- a/Meta NFT/src/scss/style.css
+++ b/Meta NFT/src/scss/style.css
@@ -318,6 +318,12 @@ body {
   width: 100%;
   height: 422px;
 }
+@media (max-width: 768px) {
+  #picture .container .boxing {
+    width: 330px;
+    margin: auto;
+  }
+}
 #picture .container .boxing .peple {
   display: flex;
   justify-content: space-between;
@@ -357,10 +363,17 @@ body {
   color: #e4484c;
   padding: 0px 5px;
 }
+#picture .container .boxing .img {
+  width: 100%;
+}
 #picture .container .boxing .img img {
   border-radius: 24px;
-  width: 149px;
+  width: 100%;
   height: 149px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 
 #anime {
@@ -406,7 +419,6 @@ body {
   align-items: center;
 }
 #anime .container .boxing {
-  margin: 0 auto;
   color: #fff;
   background: rgba(255, 255, 255, 0.03);
   border-radius: 24px;
@@ -414,9 +426,15 @@ body {
   padding: 20px;
   transition: all 0.3s ease-in-out;
   transform: translateY(10px);
-  width: 350px;
+  width: 100%;
   height: 475px;
   overflow: hidden;
+}
+@media (max-width: 768px) {
+  #anime .container .boxing {
+    max-width: 350px;
+    margin: auto;
+  }
 }
 #anime .container .boxing:hover {
   transform: translateY(0);
@@ -426,14 +444,15 @@ body {
   transform: translateY(0);
 }
 #anime .container .boxing .all .img {
-  width: 300px;
+  border-radius: 30px;
+  width: 100%;
   height: 300px;
   position: relative;
   overflow: hidden;
 }
 #anime .container .boxing .all .img img {
   border-radius: 30px;
-  width: 100%;
+  width: 320px;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -604,6 +623,12 @@ body {
   display: flex;
   align-items: center;
 }
+@media (max-width: 768px) {
+  #artist .container .boxing {
+    width: 75%;
+    margin: auto;
+  }
+}
 #artist .container .boxing a img {
   margin-right: 15px;
   width: 80px;
@@ -657,6 +682,45 @@ body {
   display: flex;
   gap: 30px;
   flex-direction: column;
+}
+#accord .container .accordion .accordion-item {
+  border: none;
+  background: transparent;
+}
+#accord .container .accordion .accordion-item .accordion-button {
+  font-family: "Michroma", sans-serif;
+  color: #fff;
+  font-size: 17px;
+  font-weight: 400;
+  background: rgba(255, 255, 255, 0.03);
+  border-radius: 24px 24px 0px 0px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+#accord .container .accordion .accordion-item .accordion-button::after {
+  content: "\f107";
+  width: 43px;
+  height: 43px;
+  position: absolute;
+  right: 9px;
+  top: 8px;
+  font-family: "FontAwesome";
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 44px;
+  background: linear-gradient(124deg, #f95a85, #f70361, #f95420);
+  border-radius: 24px;
+  text-align: center;
+}
+#accord .container .accordion .accordion-item .accordion-body {
+  font-size: 15px;
+  line-height: 1.7;
+  margin: 0;
+  color: #b9b5b5;
+  padding: 20px;
+  border: 1px solid #19213e;
+  border-top: none;
+  border-radius: 0 0 24px 24px;
 }
 
 #blur {
@@ -757,11 +821,6 @@ body {
   padding: 150px 0px;
   background-size: cover;
   min-height: 850px;
-}
-@media (max-width: 768px) {
-  #art {
-    width: 100%;
-  }
 }
 #art .container {
   max-width: 1140px;
