--- a/Meta NFT/src/scss/style.css
+++ b/Meta NFT/src/scss/style.css
@@ -139,6 +139,9 @@ body {
 .container .all_line .a_navbar {
   width: 160px;
   height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fff;
   font-weight: 700;
   text-decoration: none;
